package Cmd;


//struct stBaseCmd
//{
//	uint16 cmdid;
//  uint32 cmdlen;
//	char data[0];
//};


enum enCmdId
{
	enNone = 0;

	/// 请求逻辑服务器信息
	enRequestLogicInfo = 1;

	/// 返回需要连接的逻辑服务器信息
	enNotifyLogicInfo = 2;

	/// 请求登录
	enRequestLogin = 3;

	/// 返回登录结果 
	enNotifyLoginResult = 4;

	/// 创建频道
	enRequestCreateRoom = 5;

	/// 创建频道返回
	enNotifyCreateResult = 6;

	/// 加入频道
	enRequestEnterRoom = 7;

	/// 加入频道返回
	enNotifyEnterResult = 8;
}

